cloud-ops/kubernetes/common/Gateway/istio-cert-manager-gateway.yaml
# Need to get rid of incorrect HTTPS servicing of default
# gateway in favor of individually created gateways for 
# each DNS name that supports HTTPS
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  labels:
    app: ingressgateway
  name: istio-autogenerated-k8s-ingress
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP2
